# carter

./: Cargo.toml  config.example.toml
docs/: ndjson.md
src/: cost.rs  error.rs  main.rs  tokens.rs  wizard.rs
src/agent/: ask_user.rs  checkpoint.rs  context.rs  mod.rs  subagent.rs  thread.rs  turn.rs  ui.rs
src/commands/: expand.rs  loader.rs  mod.rs
src/config/: interpolate.rs  mod.rs  paths.rs
src/hooks/: mod.rs  registry.rs  runner.rs  types.rs
src/mcp/: manager.rs  mod.rs  tool.rs  transport.rs
src/media/: clipboard.rs  mod.rs
src/memory/: mod.rs  writer.rs
src/ndjson/: mod.rs  protocol.rs  reader.rs  runner.rs  sink.rs
src/prompt/: mod.rs
src/provider/: event.rs  genai_provider.rs  llm_log.rs  mod.rs
src/registry/: fetch.rs  mod.rs  model.rs  models_dev.rs
src/session/: history.rs  mod.rs  recorder.rs  store.rs
src/skills/: mod.rs  skill_tool.rs
src/tools/: bash.rs  edit_file.rs  glob_tool.rs  grep.rs  mod.rs  read_file.rs  save_memory.rs  todo_write.rs  write_file.rs
src/tui/: mod.rs  tracking_backend.rs
