[package]
name = "carter"
version = "0.1.1"
edition = "2024"
description = "Carter — a Rust agent CLI with an interactive TUI, multi-provider LLM support, skills, and MCP integration."
license = "Apache-2.0"

[dependencies]
genai = "0.6.5"
# models.dev 元数据爬取（仅 registry/fetch.rs 使用）。rustls 避免 openssl 系统依赖。
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
# scrolling-regions 已关闭：该特性用 DECSTBM 区域滚动（CSI r + CSI S）实现 insert_before，
# 但终端不会把区域内滚出的行写入 scrollback —— 导致历史超过一屏后丢失、无法上滚查看。
# 回落到 append_lines 路径后历史正常进 scrollback。中文字后多空格的问题改在 tui 渲染层处理。
ratatui = { version = "0.30.2" }
# TUI 终端事件流（event-stream feature 提供 EventStream，ratatui 传递依赖未默认开启）。
crossterm = { version = "0.29", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# 会话 id。仅 src/session/ 使用。
uuid = { version = "1", features = ["v4"] }
glob = "0.3"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
# 生成 shell 补全脚本（carter completion <shell>）。
clap_complete = "4"
unicode-width = "0.2"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# 官方 MCP SDK，仅 src/mcp/ 使用。client + stdio 子进程 + streamable-http(reqwest)。
rmcp = { version = "1.8.0", features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest"] }
# MCP http transport 自定义 header 类型（HeaderName/HeaderValue）；仅 src/mcp/ 使用。
http = "1"
# 多模态：图片内容寻址（sha256） + base64 编码给 provider 发 wire。
sha2 = "0.10"
base64 = "0.22"
# 真实 token 计数（OpenAI 系 cl100k_base / o200k_base 直接命中；
# Anthropic / Gemini 用 cl100k_base 作为合理估算）。
tiktoken-rs = "0.7"
# 图片自动 downsample（控制多模态 token 成本，对齐 aiko-agent 的 Jimp 1568px 策略）。
# 仅启用我们支持的几种格式，避免不必要的 binary 膨胀。
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp"] }
# 剪贴板二进制读取（macOS NSPasteboard / Linux X11+Wayland / Windows clipboard）。
# 必须保留 image-data feature，否则 get_image() 不可用。
arboard = "3"

# bash 工具 unix 进程组超时清理：kill(-pgid)。仅 src/tools/bash.rs 在 unix 下使用。
[target.'cfg(unix)'.dependencies]
libc = "0.2"
